<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Envue</string>

    <!-- server URI -->
    <string name="graphql_base_url">https://envue.me/api</string>

    <!-- related to facebook login -->
    <string name="facebook_app_id">386299921934283</string>
    <string name="fb_login_protocol_scheme">fb386299921934283</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_name">Name placeholder</string>
    <string name="log_out">Log out</string>
    <string name="ChangeDisplayName">Change display name</string>
    <string name="invalid_access_token">Invalid access token</string>
    <string name="action_profile">Profile</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="theme_switch">Theme switch</string>

    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="write_a_message_as">Write a message as %1$s</string>
    <string name="send">SEND</string>
    <string name="placeholder">Placeholder</string>
    <string name="chatter_avatar">Chatter avatar</string>
    <string name="placeholder_name">John Doe</string>
    <string name="map">Map</string>

    <!-- Interests -->
    <string name="current_interests">Current Interests</string>
    <string name="interests_button">Change Interests</string>
    <string name="interests_dialog_title">What are your interests?</string>
    <string name="interests_dialog_possitive">OK</string>
    <string name="interests_dialog_negative">Cancel</string>
    <string name="interests_response_key">INTERESTS_RESPONSE_KEY</string>
    <string name="current_interests_key">CURRENT_INTERESTS_KEY</string>

    <!-- Initialize Broadcast activity -->
    <string name="title_activity_initialize_broadcast">InitializeBroadcastActivity</string>
    <string name="start_broadcast_button_text">GO</string>
    <string name="initialize_broadcast_header">What are you streaming?</string>
    <string name="initialize_broadcast_other_placeholder">Other?</string>
    <string name="search_for_emoji_text">Search for an emoji…</string>
    <string name="illegal_char_in_search_for_emoji_field">Emojis only! 😡</string>
    <string name="no_categories_chosen">You must select at least 1 category!</string>
    <string name="title_activity_interests">InterestsActivity</string>
    <string name="did_not_receive_location">We could not get your last position. Is your location turned on?</string>
    <string name="location_permission_not_granted">We need your permission to get your location before you can start a broadcast.</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Envue</string>
    <string name="notification_channel_id">"Envue"</string>
    <string name="notification_channel_description">Envue notification channel</string>

    <!-- Filter -->
    <string name="title_activity_filter">What do you want to see?</string>
    <string name="accept_filters_button_text">OK</string>
    <string name="filter_response_key">FILTER_RESPONSE_KEY</string>


    <!-- Filter -->
    <string name="category_selection_header">Select categories</string>
    <string name="category_selection_button_text">OK</string>


    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Subscribe failed</string>
    <string name="msg_unsubscribed">Unsubscribed</string>
    <string name="msg_unsubscribe_failed">Unsubscribe failed</string>
    <string name="title_activity_choose_broadcast">ChooseBroadcastActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="live">LIVE</string>
    <string name="recommendation_thumbnail">Recommendation thumbnail</string>
    <string name="viewer">Viewer</string>
    <string name="recommended">Recommended</string>
    <string name="_0">0</string>
    <string name="react">React</string>
    <string name="report">Report</string>
    <string name="percentage">%d%%</string>
    <string name="likes">%d%% (%d)</string>
    <string name="rank">Rank:</string>
    <string name="percentile">Percentile:</string>
    <string name="total_score">Total score:</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="loading">Loading..</string>
    <string name="n_a">N/A</string>
    <string name="stop">STOP</string>
    <string name="settings">Settings</string>
    <string name="enable_chat">Enable chat</string>
    <string name="play">Play</string>
    <string name="chat_disabled">The broadcaster has disabled chat and is not able to see messages.</string>
    <string name="chat_enabled">The broadcaster has enabled chat and is now able to see messages.</string>
    <string name="unable_to_retrieve_location">Unable to retrieve your location, please try again.</string>
    <string name="filter">Filter</string>
    <string name="explore">Explore</string>
    <string name="hint_viewers">This is the number of viewers on your broadcast.</string>
    <string name="hint_like">This is the approval rating and number of ratings on your broadcast.</string>
    <string name="pause">Pause</string>
    <string name="report_video">Report video</string>
    <string name="enable_recommendations">Enable recommendations</string>

</resources>
