<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clipToPadding="false">

    <ImageView
            android:id="@+id/avatarPicture"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/chatter_avatar"/>

    <TextView
            android:id="@+id/name"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/avatarPicture"
            android:layout_alignTop="@+id/avatarPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2"
            android:text="@string/placeholder_name"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message_body"
            android:layout_below="@+id/name"
            android:layout_alignEnd="@+id/name"
            android:textColor="@color/white"
            android:padding="6dp"
            android:layout_gravity="end"
            android:text="@string/placeholder"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="2"
            android:textAlignment="textEnd"/>
</RelativeLayout>