<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dk.cs.aau.envue.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/profileNameView"/>

    <Button
        android:text="@string/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileNameView"
        android:id="@+id/logOutButton"
        android:layout_margin="16dp"
        />

    <TextView
            android:text="@string/current_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logOutButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/interestsView"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/interestsView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/currentInterestsView"
    />

    <Button
            android:text="@string/interests_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentInterestsView"
            android:id="@+id/interestsButton"
            android:layout_margin="16dp"
    />


</RelativeLayout>