<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:id="@+id/leaderboard_fraq"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:visibility="gone">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:layout_weight="3"
                    android:padding="4dp"/>
            <TextView android:layout_width="0px"
                      android:layout_height="wrap_content"
                      android:layout_weight="8"
                      android:id="@+id/rank"
                      android:text="@string/loading"
                      android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/total_score"
                    android:padding="4dp"/>
            <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:id="@+id/total_score"
                    android:layout_weight="8"
                    android:text="@string/loading"
                    android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/percentile"
                    android:padding="4dp"/>
            <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/loading"
                    android:padding="4dp"
                    android:paddingBottom="0dp"
                    android:id="@+id/percentile"/>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/leaderboard_chart"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>